Experiments/6-code-optimization/optimizer_opt.output
Grammar

    0 $accept: program $end

    1 program: program statement
    2        | %empty

    3 statement: ID ASSIGN expr SEMI

    4 expr: expr PLUS term
    5     | expr MINUS term
    6     | term

    7 term: term MUL factor
    8     | term DIV factor
    9     | factor

   10 factor: NUMBER
   11       | LPAREN expr RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <num> (258) 10
    ID <id> (259) 3
    ASSIGN (260) 3
    PLUS (261) 4
    MINUS (262) 5
    MUL (263) 7
    DIV (264) 8
    LPAREN (265) 11
    RPAREN (266) 11
    SEMI (267) 3


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    program (14)
        on left: 1 2
        on right: 0 1
    statement <node> (15)
        on left: 3
        on right: 1
    expr <node> (16)
        on left: 4 5 6
        on right: 3 4 5 11
    term <node> (17)
        on left: 7 8 9
        on right: 4 5 6 7 8
    factor <node> (18)
        on left: 10 11
        on right: 7 8 9


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    1 program: program . statement

    $end  shift, and go to state 2
    ID    shift, and go to state 3

    statement  go to state 4


State 2

    0 $accept: program $end .

    $default  accept


State 3

    3 statement: ID . ASSIGN expr SEMI

    ASSIGN  shift, and go to state 5


State 4

    1 program: program statement .

    $default  reduce using rule 1 (program)


State 5

    3 statement: ID ASSIGN . expr SEMI

    NUMBER  shift, and go to state 6
    LPAREN  shift, and go to state 7

    expr    go to state 8
    term    go to state 9
    factor  go to state 10


State 6

   10 factor: NUMBER .

    $default  reduce using rule 10 (factor)


State 7

   11 factor: LPAREN . expr RPAREN

    NUMBER  shift, and go to state 6
    LPAREN  shift, and go to state 7

    expr    go to state 11
    term    go to state 9
    factor  go to state 10


State 8

    3 statement: ID ASSIGN expr . SEMI
    4 expr: expr . PLUS term
    5     | expr . MINUS term

    PLUS   shift, and go to state 12
    MINUS  shift, and go to state 13
    SEMI   shift, and go to state 14


State 9

    6 expr: term .
    7 term: term . MUL factor
    8     | term . DIV factor

    MUL  shift, and go to state 15
    DIV  shift, and go to state 16

    $default  reduce using rule 6 (expr)


State 10

    9 term: factor .

    $default  reduce using rule 9 (term)


State 11

    4 expr: expr . PLUS term
    5     | expr . MINUS term
   11 factor: LPAREN expr . RPAREN

    PLUS    shift, and go to state 12
    MINUS   shift, and go to state 13
    RPAREN  shift, and go to state 17


State 12

    4 expr: expr PLUS . term

    NUMBER  shift, and go to state 6
    LPAREN  shift, and go to state 7

    term    go to state 18
    factor  go to state 10


State 13

    5 expr: expr MINUS . term

    NUMBER  shift, and go to state 6
    LPAREN  shift, and go to state 7

    term    go to state 19
    factor  go to state 10


State 14

    3 statement: ID ASSIGN expr SEMI .

    $default  reduce using rule 3 (statement)


State 15

    7 term: term MUL . factor

    NUMBER  shift, and go to state 6
    LPAREN  shift, and go to state 7

    factor  go to state 20


State 16

    8 term: term DIV . factor

    NUMBER  shift, and go to state 6
    LPAREN  shift, and go to state 7

    factor  go to state 21


State 17

   11 factor: LPAREN expr RPAREN .

    $default  reduce using rule 11 (factor)


State 18

    4 expr: expr PLUS term .
    7 term: term . MUL factor
    8     | term . DIV factor

    MUL  shift, and go to state 15
    DIV  shift, and go to state 16

    $default  reduce using rule 4 (expr)


State 19

    5 expr: expr MINUS term .
    7 term: term . MUL factor
    8     | term . DIV factor

    MUL  shift, and go to state 15
    DIV  shift, and go to state 16

    $default  reduce using rule 5 (expr)


State 20

    7 term: term MUL factor .

    $default  reduce using rule 7 (term)


State 21

    8 term: term DIV factor .

    $default  reduce using rule 8 (term)
